--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,44 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: white;
+  background: black;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.parent {
+  display: grid;
+  grid-template: auto 1fr auto / auto 1fr auto;
+  border: 1px solid white;
+}
+
+header {
+  padding: 2rem;
+  grid-column: 1 / 4;
+  border: 1px solid white;
+  
+}
+
+.left-side {
+  padding: 2rem;
+  grid-column: 1 / 2;
+  border: 1px solid white;
+}
+
+main {
+  padding: 2rem;
+  grid-column: 2 / 3;
+  border: 1px solid white;
+}
+
+.right-side {
+  padding: 2rem;
+  grid-column: 3 / 4;
+  border: 1px solid white;
+}
+
+footer {
+  padding: 2rem;
+  grid-column: 1 / 4;
+  border: 1px solid white;
 }
